infrastructure/kubernetes/dragonfly/mainframe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dragonfly
  name: mainframe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mainframe
  template:
    metadata:
      labels:
        app: mainframe
    spec:
      containers:
        - name: mainframe
          image: ghcr.io/vipyrsec/dragonfly-mainframe:edge
      imagePullSecrets:
        - name: dockerconfigjson-github
