infrastructure/kubernetes/dragonfly/mainframe/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dragonfly
  name: mainframe
spec:
  selector:
    app: mainframe
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
