infrastructure/kubernetes/dragonfly/mainframe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dragonfly
  name: dragonfly-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dragonfly-staging.vipyrsec.com
      secretName: dragonfly-tls
  rules:
    - host: dragonfly-staging.vipyrsec.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mainframe
                port:
                  number: 8000
